Project formatting, upgrades ...etc.