@@ -5,35 +5,35 @@
 
   :dependencies [[clojure.java-time "0.3.2"]
                  [java-time-literals "2018-04-06"]
-                 [clj-http "3.9.1"]
-                 [com.fasterxml.jackson.core/jackson-core "2.9.7"]
-                 [com.fasterxml.jackson.datatype/jackson-datatype-jdk8 "2.6.3"]
-                 [compojure "1.6.1"]
-                 [cprop "0.1.13"]
-                 [funcool/struct "1.3.0"]
-                 [luminus-immutant "0.2.4"]
-                 [luminus-transit "0.1.1"]
-                 [luminus/ring-ttl-session "0.3.2"]
-                 [markdown-clj "1.0.3"]
-                 [metosin/compojure-api "1.1.12"]
-                 [metosin/muuntaja "0.6.1"]
-                 [metosin/ring-http-response "0.9.0"]
-                 [mount "0.1.13"]
-                 [nrepl "0.4.5"]
+                 [clj-http "3.10.1"]
+                 [com.fasterxml.jackson.core/jackson-core "2.11.2"]
+                 [com.fasterxml.jackson.datatype/jackson-datatype-jdk8 "2.11.2"]
+                 [compojure "1.6.2"]
+                 [cprop "0.1.17"]
+                 [funcool/struct "1.4.0"]
+                 [luminus-immutant "0.2.5"]
+                 [luminus-transit "0.1.2"]
+                 [luminus/ring-ttl-session "0.3.3"]
+                 [markdown-clj "1.10.5"]
+                 [metosin/compojure-api "1.1.13"]
+                 [metosin/muuntaja "0.6.7"]
+                 [metosin/ring-http-response "0.9.1"]
+                 [mount "0.1.16"]
+                 [nrepl "0.8.0"]
                  [org.clojure/clojure "1.9.0"]
-                 [org.clojure/tools.cli "0.4.1"]
-                 [org.clojure/tools.logging "0.4.1"]
-                 [org.webjars.bower/tether "1.4.4"]
-                 [org.webjars/bootstrap "4.1.3"]
-                 [org.webjars/font-awesome "5.3.1"]
-                 [org.webjars/jquery "3.3.1-1"]
-                 [org.webjars/webjars-locator "0.34"]
+                 [org.clojure/tools.cli "1.0.194"]
+                 [org.clojure/tools.logging "1.1.0"]
+                 [org.webjars.bower/tether "2.0.0-beta.5"]
+                 [org.webjars/bootstrap "4.5.0"]
+                 [org.webjars/font-awesome "5.14.0"]
+                 [org.webjars/jquery "3.5.1"]
+                 [org.webjars/webjars-locator "0.40"]
                  [ring-webjars "0.2.0"]
-                 [ring/ring-core "1.7.0"]
+                 [ring/ring-core "1.8.1"]
                  [ring/ring-defaults "0.3.2"]
-                 [selmer "1.12.2"]]
+                 [selmer "1.12.28"]]
 
-  :min-lein-version "2.0.0"
+  :min-lein-version "2.9.0"
 
   :source-paths ["src/clj"]
   :test-paths ["test/clj"]
@@ -41,8 +41,9 @@
   :target-path "target/%s/"
   :main ^:skip-aot next-transit.core
 
-  :plugins [[lein-cljfmt "0.6.1"]
-	    [lein-immutant "2.1.0"]]
+  :plugins [[lein-cljfmt "0.6.8"]
+	    [lein-immutant "2.1.0"]
+	    [lein-ancient "0.6.15"]]
 
   :profiles
   {:uberjar {:omit-source true
@@ -54,13 +55,13 @@
    :dev           [:project/dev :profiles/dev]
    :test          [:project/dev :project/test :profiles/test]
 
-   :project/dev  {:jvm-opts ["-Dconf=dev-config.edn" "--add-modules" "java.xml.bind"]
-                  :dependencies [[expound "0.7.1"]
-                                 [pjstadig/humane-test-output "0.8.3"]
-                                 [prone "1.6.1"]
-                                 [ring/ring-devel "1.7.0"]
-                                 [ring/ring-mock "0.3.2"]]
-                  :plugins      [[com.jakemccrary/lein-test-refresh "0.23.0"]]
+   :project/dev  {:jvm-opts ["-Dconf=dev-config.edn"]
+                  :dependencies [[expound "0.8.5"]
+                                 [pjstadig/humane-test-output "0.10.0"]
+                                 [prone "2020-01-17"]
+                                 [ring/ring-devel "1.8.1"]
+                                 [ring/ring-mock "0.4.0"]]
+                  :plugins      [[com.jakemccrary/lein-test-refresh "0.24.1"]]
 
                   :source-paths ["env/dev/clj"]
                   :resource-paths ["env/dev/resources"]
@@ -68,7 +69,7 @@
                   :injections [(require 'pjstadig.humane-test-output)
                                (pjstadig.humane-test-output/activate!)
                                (require 'java-time-literals.core)]}
-   :project/test {:jvm-opts ["-Dconf=test-config.edn" "--add-modules" "java.xml.bind"]
+   :project/test {:jvm-opts ["-Dconf=test-config.edn"]
                   :resource-paths ["env/test/resources"]}
    :profiles/dev {}
    :profiles/test {}})
